--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ashrafai-backend",
+  "name": "extrainai-backend",
   "version": "1.0.0",
-  "description": "AshrafAI Backend API - Gemini powered chatbot",
+  "description": "Extrain Ai Backend API - Powered by Groq and Gemini",
   "main": "dist/server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
